# get-started

./: README.md
cxx/: CMakeLists.txt  README.md  configure-emscripten.bat  configure-msvc.bat  configure-ninja.bat
cxx/calc_crc32/: CMakeLists.txt  calc_crc32.cpp
cxx/crc32/: CMakeLists.txt  crc32.cpp  crc32.hpp  crc32_data.cpp  crc32_test.cpp  helpers.hpp  helpers_test.cpp
cxx/tests/: tests_runner.cpp
cxx/web_calc/: CMakeLists.txt  crc32_bindings.cpp  web_calc.html
